--- a/style.css
+++ b/style.css
@@ -46,17 +46,20 @@
     padding-left: 15px;
     padding-right: 15px;
     border-radius: 20px;
+    transition: all .2s ease-in-out; 
     cursor: grab; /* Change cursor style when hovering over draggable elements */
 
 }
 
 .task:active {
   cursor: grabbing; /* Change cursor style when dragging */
-  /* Add additional styling for the dragged element, such as a shadow or opacity */
+transform: scale(1.1); 
+    /* Add additional styling for the dragged element, such as a shadow or opacity */
 }
 
 .drop-zone {
     position: absolute;
+    border-radius: 20px;
     width: 350px;
     height: 55px;
     background-color: white;
