--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@
     letter-spacing: 3px;
     position: absolute;
     padding: 10px;
-    padding-left: 15px;
+    padding-left: 25px;
     padding-right: 15px;
     border-radius: 20px;
     width: 320px; 
@@ -64,76 +64,48 @@
     width: 350px;
     height: 55px;
     background-color: white;
+    
 }
 
 .later{
     height: 400px;
+    opacity: 80%;
+    border: 0.15em solid black;
+}
+  
+input[type="checkbox"] {
+  appearance: none;
+  margin: 0px;
+  margin-right: 10px;
+  /* Not removed via appearance */
+  background-color: #ffffff;
+  font: inherit;
+  color: #ffffff;
+  width: 1.6em;
+  height: 1.6em;
+  border: 0.15em solid black;
+  border-radius: 0.55em;
 }
 
- /* Customize the label (the container) */
- /*.container {
-    display: block;
-    position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
-    cursor: pointer;
-    font-size: 22px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }*/
+input[type="checkbox"]::before {
+  font-size: 15px;
+  content: "x";
+  width: 0.75em;
+  height: 0.75em;
+
+}
+
+input[type="checkbox"]:checked::before {
+  transform: scale(1);
+  content: "🍓";
+}
+
+
   
-  /* Hide the browser's default checkbox */
-  .container input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-  }
+
   
-  /* Create a custom checkbox */
-  .checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 25px;
-    width: 25px;
-    background-color: #eee;
-  }
+
   
-  /* On mouse-over, add a grey background color */
-  .container:hover input ~ .checkmark {
-    background-color: #ccc;
-  }
+ 
   
-  /* When the checkbox is checked, add a blue background */
-  .container input:checked ~ .checkmark {
-    background-color: #2196F3;
-  }
-  
-  /* Create the checkmark/indicator (hidden when not checked) */
-  .checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
-  }
-  
-  /* Show the checkmark when checked */
-  .container input:checked ~ .checkmark:after {
-    display: block;
-  }
-  
-  /* Style the checkmark/indicator */
-  .container .checkmark:after {
-    left: 9px;
-    top: 5px;
-    width: 5px;
-    height: 10px;
-    border: solid white;
-    border-width: 0 3px 3px 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-  } 
+ 
