--- a/style.css
+++ b/style.css
@@ -74,10 +74,14 @@ transform: scale(1.05);
 }
 
 .trash{
+  background-image: url("trash_closed.png");
+  background-size: 100% 100%;
   position:absolute;
-  width: 300px;
-  height: 300px;
-  background-color: black;
+  width: 10%;
+  height: 15%;
+}
+.trash:hover{
+  background-image: url("trash_open.png");
 }
 
 input[type="checkbox"] {
